fix overflow on mobile devices for Info

--- a/src/css/info.pcss
+++ b/src/css/info.pcss
@@ -7,9 +7,13 @@
   height: 70vh;
 }
 @media (max-width: 640px) {
+  #main-menu {
+    overflow-y: unset !important;
+  }
   .docs-gap[name="info"] {
     width: 85vw;
-    height: 75vh;
+    height: 100%;
+    overflow-y: unset;
   }
 }
 @media (max-width: 1024px) {
